# django-postgres

./: README.md  pyproject.toml
config/: settings.py
