[tool.poetry]
name = "django-postgre"
version = "0.1.0"
description = ""
authors = ["Sergey A. <murlakatamenka@disroot.org>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "~=3.2"
psycopg2-binary = "^2.9.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
